--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -53,12 +53,13 @@
                                 </div>
 
                                 <!-- Role Selection -->
+                                <!-- NEW - CORRECT -->
                                 <div class="form-group text-center">
                                     <label class="radio-inline mr-3">
-                                        <input type="radio" th:field="*{role}" value="TEACHER" required> Teacher
+                                        <input type="radio" name="role" value="TEACHER" required> Teacher
                                     </label>
                                     <label class="radio-inline mr-3">
-                                        <input type="radio" th:field="*{role}" value="STUDENT" required> Student
+                                        <input type="radio" name="role" value="STUDENT" required> Student
                                     </label>
                                 </div>
 
