--- a/src/main/resources/templates/create_quiz.html
+++ b/src/main/resources/templates/create_quiz.html
@@ -56,6 +56,7 @@
                 <div class="card-body">
                     <h4 class="card-title mb-3">Create a New Quiz</h4>
                     <form th:action="@{/teacher/save_quiz}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                         <div class="form-group">
                             <label for="title">Quiz Title</label>
                             <input type="text" class="form-control" id="title" name="title" placeholder="Enter quiz title" required>
@@ -93,6 +94,8 @@
             <div class="modal fade" id="modalMCQ" tabindex="-1" role="dialog">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <form th:action="@{/teacher/add_question}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="hidden" name="quizId" th:value="${quiz.id}" />
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title">Add Multiple Choice Question</h5>
@@ -128,6 +131,8 @@
             <div class="modal fade" id="modalTF" tabindex="-1" role="dialog">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <form th:action="@{/teacher/add_question}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="hidden" name="quizId" th:value="${quiz.id}" />
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title">Add True or False Question</h5>
@@ -159,6 +164,8 @@
             <div class="modal fade" id="modalIdent" tabindex="-1" role="dialog">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <form th:action="@{/teacher/add_question}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="hidden" name="quizId" th:value="${quiz.id}" />
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title">Add Identification Question</h5>
@@ -187,6 +194,8 @@
             <div class="modal fade" id="modalEssay" tabindex="-1" role="dialog">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <form th:action="@{/teacher/add_question}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="hidden" name="quizId" th:value="${quiz.id}" />
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title">Add Essay Question</h5>
