--- a/src/main/resources/templates/teacher_quizedit.html
+++ b/src/main/resources/templates/teacher_quizedit.html
@@ -54,7 +54,8 @@
         <div class="container-fluid">
 
             <!-- Quiz Title -->
-            <form th:action="@{/teacher/teacher_classlist/update}" th:object="${quiz}" method="post">
+            <form th:action="@{/teacher/quiz/update}" th:object="${quiz}" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <div class="card mb-4">
                     <div class="card-body">
                         <h4 class="card-title mb-3">Edit Quiz Details</h4>
