--- a/src/main/resources/templates/fragments/navheader-teacher.html
+++ b/src/main/resources/templates/fragments/navheader-teacher.html
@@ -110,7 +110,7 @@
         <div class="brand-logo">
             <a th:href="@{/teacher}">
                 <b class="logo-abbr"><img th:src="@{/images/logo.png}" alt=""></b>
-                <span class="logo-compact"><img th:src="@{/images/logo-compact.png}" alt=""></span>
+                <span class="logo-compact"><img th:src="@{/images/logo.png}" alt=""></span>
                 <span class="brand-title">
                     <img th:src="@{/images/logo-text.png}" alt="">
                 </span>
