fix everything maliban sa ui

--- a/src/main/resources/templates/fragments/navheader-teacher.html
+++ b/src/main/resources/templates/fragments/navheader-teacher.html
@@ -104,13 +104,12 @@
     </style>
 </head>
 <body>
-
 <div th:fragment="navheader-teacher">
     <div class="nav-header">
         <div class="brand-logo">
             <a th:href="@{/teacher}">
                 <b class="logo-abbr"><img th:src="@{/images/logo.png}" alt=""></b>
-                <span class="logo-compact"><img th:src="@{/images/logo.png}" alt=""></span>
+                <span class="logo-compact"><img class="img-logo" th:src="@{/images/logo.png}" alt=""></span>
                 <span class="brand-title">
                     <img th:src="@{/images/logo-text.png}" alt="">
                 </span>
