--- a/src/main/resources/templates/fragments/navheader-student.html
+++ b/src/main/resources/templates/fragments/navheader-student.html
@@ -111,7 +111,7 @@
         <div class="brand-logo">
             <a th:href="@{/student}">
                 <b class="logo-abbr"><img th:src="@{/images/logo.png}" alt=""></b>
-                <span class="logo-compact"><img th:src="@{/images/logo.png}" alt=""></span>
+                <span class="logo-compact"><img class="img-logo" th:src="@{/images/logo.png}" alt=""></span>
                 <span class="brand-title">
                     <img th:src="@{/images/logo-text.png}" alt="">
                 </span>
