--- a/src/main/resources/static/css/teacher-dashboard.css
+++ b/src/main/resources/static/css/teacher-dashboard.css
@@ -15,7 +15,7 @@ body::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('/images/background.jpg');
+    background-image: url('static/images/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
