--- a/src/main/resources/static/css/auth-pages.css
+++ b/src/main/resources/static/css/auth-pages.css
@@ -181,7 +181,7 @@ h3 {
 }
 
 .login-input .form-control::placeholder {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgb(255, 255, 255);
     font-weight: 500;
 }
 
